// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions - component should render actionObject as first action 1`] = `
<Fragment>
  <ToolbarItem
    className="ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <Button
      onClick={[MockFunction]}
      ouiaId="Some title"
    >
      Some title
    </Button>
  </ToolbarItem>
  <ToolbarItem
    className="ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <Dropdown
      dropdownItems={
        Array [
          <DropdownItem
            className="ins-c-primary-toolbar__first-action "
            component="button"
            onClick={[Function]}
          >
            Some title
          </DropdownItem>,
        ]
      }
      isOpen={false}
      isPlain={true}
      onSelect={[Function]}
      ouiaId="Actions"
      toggle={
        <KebabToggle
          onToggle={[Function]}
        />
      }
    />
  </ToolbarItem>
</Fragment>
`;

exports[`Actions - component should render actions and overflow 1`] = `
<Fragment>
  <ToolbarItem
    className="ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button
      key="btn"
      onClick={[MockFunction]}
    >
      Some button
    </button>
  </ToolbarItem>
  <ToolbarItem
    className=" ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <Dropdown
      dropdownItems={
        Array [
          <DropdownItem
            className="ins-c-primary-toolbar__first-action "
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </DropdownItem>,
          <DropdownItem
            component="button"
            onClick={[Function]}
          >
            Some title
          </DropdownItem>,
          <DropdownItem
            component="button"
            onClick={[Function]}
          >
            Custom props
          </DropdownItem>,
          <DropdownItem
            component="button"
            onClick={[Function]}
          >
            plain string
          </DropdownItem>,
          <DropdownSeparator
            className="ins-c-primary-toolbar__overflow-actions-separator"
          />,
          <DropdownItem
            className="ins-c-primary-toolbar__overflow-actions"
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </DropdownItem>,
          <DropdownItem
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            Some title
          </DropdownItem>,
          <DropdownItem
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            Custom props
          </DropdownItem>,
          <DropdownItem
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            plain string
          </DropdownItem>,
        ]
      }
      isOpen={false}
      isPlain={true}
      onSelect={[Function]}
      ouiaId="Actions"
      toggle={
        <KebabToggle
          onToggle={[Function]}
        />
      }
    />
  </ToolbarItem>
</Fragment>
`;

exports[`Actions - component should render empty actions 1`] = `
<Fragment>
  <ToolbarItem
    className="ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <Dropdown
      dropdownItems={
        Array [
          <DropdownItem
            className="ins-c-primary-toolbar__overflow-actions"
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </DropdownItem>,
          <DropdownItem
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            Some title
          </DropdownItem>,
          <DropdownItem
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            Custom props
          </DropdownItem>,
          <DropdownItem
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            plain string
          </DropdownItem>,
        ]
      }
      isOpen={false}
      isPlain={true}
      onSelect={[Function]}
      ouiaId="Actions"
      toggle={
        <KebabToggle
          onToggle={[Function]}
        />
      }
    />
  </ToolbarItem>
</Fragment>
`;

exports[`Actions - component should render just actions 1`] = `
<Fragment>
  <ToolbarItem
    className="ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button
      key="btn"
      onClick={[MockFunction]}
    >
      Some button
    </button>
  </ToolbarItem>
  <ToolbarItem
    className=" ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <Dropdown
      dropdownItems={
        Array [
          <DropdownItem
            className="ins-c-primary-toolbar__first-action "
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </DropdownItem>,
          <DropdownItem
            component="button"
            onClick={[Function]}
          >
            Some title
          </DropdownItem>,
          <DropdownItem
            component="button"
            onClick={[Function]}
          >
            Custom props
          </DropdownItem>,
          <DropdownItem
            component="button"
            onClick={[Function]}
          >
            plain string
          </DropdownItem>,
        ]
      }
      isOpen={false}
      isPlain={true}
      onSelect={[Function]}
      ouiaId="Actions"
      toggle={
        <KebabToggle
          onToggle={[Function]}
        />
      }
    />
  </ToolbarItem>
</Fragment>
`;

exports[`Actions - component should render no data 1`] = `<Fragment />`;

exports[`Actions - component should render one action 1`] = `
<Fragment>
  <ToolbarItem
    className="ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button
      key="btn"
      onClick={[MockFunction]}
    >
      Some button
    </button>
  </ToolbarItem>
  <ToolbarItem
    className="ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <Dropdown
      dropdownItems={
        Array [
          <DropdownItem
            className="ins-c-primary-toolbar__first-action "
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </DropdownItem>,
        ]
      }
      isOpen={false}
      isPlain={true}
      onSelect={[Function]}
      ouiaId="Actions"
      toggle={
        <KebabToggle
          onToggle={[Function]}
        />
      }
    />
  </ToolbarItem>
</Fragment>
`;

exports[`Actions - component should render one action and multiple overflow 1`] = `
<Fragment>
  <ToolbarItem
    className="ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button
      key="btn"
      onClick={[MockFunction]}
    >
      Some button
    </button>
  </ToolbarItem>
  <ToolbarItem
    className="ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <Dropdown
      dropdownItems={
        Array [
          <DropdownItem
            className="ins-c-primary-toolbar__first-action "
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </DropdownItem>,
          <DropdownSeparator
            className="ins-c-primary-toolbar__overflow-actions-separator"
          />,
          <DropdownItem
            className="ins-c-primary-toolbar__overflow-actions"
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </DropdownItem>,
          <DropdownItem
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            Some title
          </DropdownItem>,
          <DropdownItem
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            Custom props
          </DropdownItem>,
          <DropdownItem
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            plain string
          </DropdownItem>,
        ]
      }
      isOpen={false}
      isPlain={true}
      onSelect={[Function]}
      ouiaId="Actions"
      toggle={
        <KebabToggle
          onToggle={[Function]}
        />
      }
    />
  </ToolbarItem>
</Fragment>
`;

exports[`overflowActionsMapper should render action object 1`] = `
<div>
  <DropdownItem
    className="ins-c-primary-toolbar__overflow-actions"
    component="button"
    key="undefined-overflow"
    onClick={[Function]}
  >
    Some title
  </DropdownItem>
</div>
`;

exports[`overflowActionsMapper should render component 1`] = `
<div>
  <DropdownItem
    className="ins-c-primary-toolbar__overflow-actions"
    component="div"
    key="btn"
    onClick={[Function]}
  >
    <button
      key="btn"
      onClick={[MockFunction]}
    >
      Some button
    </button>
  </DropdownItem>
</div>
`;

exports[`overflowActionsMapper should render plain string 1`] = `
<div>
  <DropdownItem
    className="ins-c-primary-toolbar__overflow-actions"
    component="button"
    key="undefined-overflow"
    onClick={[Function]}
  >
    Custom props
  </DropdownItem>
</div>
`;
